--- a/prepare_model.ipynb
+++ b/prepare_model.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "99ac860b",
    "metadata": {
     "id": "99ac860b"
@@ -107,6 +107,110 @@
     "print(f'Train size: {images_train.shape[0]} samples')\n",
     "print(f'Test size: {images_test.shape[0]} samples')\n",
     "print(f'Image size: {images_train[0].shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22770ea4-52fa-4ad3-b305-f178e735cf19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0,   0,   2,   3,   2,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   5,  20,  81, 112,  76,  32,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,  33, 110, 229, 244, 201, 113,   4,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,  50, 138, 248, 253, 215, 125,   4,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          8, 127, 208, 254, 254, 215, 126,   5,   1,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   2,\n",
+       "         21, 170, 232, 254, 254, 206, 118,  12,  16,   8,   2,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   1,   0,   0,   0,   0,   0,   0,   9,\n",
+       "         50, 220, 250, 254, 253, 204, 159, 139, 159, 137,  75,  30,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   1,   6,  16,   8,   2,   0,   0,   0,   2,  25,\n",
+       "         84, 233, 252, 254, 254, 237, 224, 221, 228, 219, 140,  63,   1,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,  20,  75, 156, 137,  82,  39,  37,  51,  82, 144,\n",
+       "        189, 252, 254, 255, 254, 254, 254, 253, 245, 230, 120,  43,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,  37, 125, 247, 250, 233, 217, 217, 222, 233, 250,\n",
+       "        252, 254, 254, 254, 254, 251, 246, 208, 127,  83,  20,   5,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,  37, 127, 250, 254, 252, 250, 250, 250, 252, 254,\n",
+       "        254, 254, 254, 252, 250, 232, 208, 127,  46,  22,   2,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,  32, 109, 230, 247, 254, 254, 254, 254, 254, 254,\n",
+       "        254, 253, 246, 177, 139,  82,  46,   8,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,  18,  65, 174, 220, 249, 250, 251, 254, 254, 254,\n",
+       "        254, 246, 219,  96,  52,  21,   8,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   3,  34,  77, 125, 129, 146, 236, 252, 254,\n",
+       "        251, 175,  95,   9,   1,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   7,  20,  37,  42,  71, 223, 251, 253,\n",
+       "        244, 127,  47,   1,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,  23,  84, 233, 252, 234,\n",
+       "        177,  34,   7,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   2,  82, 170, 251, 254, 216,\n",
+       "        127,   5,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   4, 114, 203, 254, 254, 203,\n",
+       "        114,   4,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   9, 140, 222, 253, 246, 127,\n",
+       "         46,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,  21, 172, 233, 252, 234,  85,\n",
+       "         23,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,  37, 215, 249, 252, 234,  84,\n",
+       "         21,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,  36, 213, 245, 249, 240, 111,\n",
+       "         32,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,  18, 108, 125, 127, 125,  63,\n",
+       "         18,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   3,   4,   4,   4,   2,\n",
+       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "          0,   0]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images_train[10]"
    ]
   },
   {
@@ -187,6 +291,7 @@
     }
    ],
    "source": [
+    "# количество сэмплов для каждого класса\n",
     "print(\"Character | Train samples | Test samples\")\n",
     "\n",
     "for idx_tr, count_tr, idx_te, count_te in zip(*np.unique(labels_train, return_counts=True), *np.unique(labels_test, return_counts=True)):\n",
@@ -233,8 +338,7 @@
    "cell_type": "markdown",
    "id": "44aa75fc",
    "metadata": {
-    "id": "44aa75fc",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "44aa75fc"
    },
    "source": [
     "### 3. Подготовьте датасет для обучения и валидации\n",
@@ -284,9 +388,7 @@
   {
    "cell_type": "markdown",
    "id": "23137670-bf87-472b-8365-4903b9f64ec8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 4.1 Logistic Regression"
    ]
@@ -857,9 +959,7 @@
   {
    "cell_type": "markdown",
    "id": "38695868-ae74-4ec9-8059-0addc22a3c7c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 4.2 Random Forest"
    ]
@@ -1388,9 +1488,7 @@
   {
    "cell_type": "markdown",
    "id": "b74ba3c1-f97c-4be8-97f2-b434eee479a2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 4.3 Hist Gradient Boosting"
    ]
